# shelah-client

./: README.md
shelah_cli/: setup.cfg
shelah_cli/src/shelah_cli/cli/: ela_cli.py
test/func/: test_ela_cli.py
