[metadata]
name = shelah_cli

# Versioning numbers try to follow PEP 440
# https://www.python.org/dev/peps/pep-0440/
version = attr: shelah_cli.__version__
author = Alejandro Hernandez
author_email = alejandro@chateauclaudia-labs.com
license = MIT
description = Client-side CLI for the Shelah system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChateauClaudia-Labs/shelah-cli.git
project_urls =
    Bug Tracker = https://github.com/ChateauClaudia-Labs/shelah-cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires = 
    click ==8.0.4 
    requests >=2.27

[options.extras_require] 
test =
    pytest
    httpie

[options.packages.find]
where = src

[options.package_data]
#                                      GOTCHA: 
#
# Through painful hours of trial and error, found that for these folders with wildcards to get picked up
#  they must lie **immediately** under a python module.
#  So for example,  notebooks/* is not picked up, but tests_unit/output_data/notebooks/* is.
#* = expected_data/notebooks/*, config/*, input_data/*, expected_data/*, results_data/*, results_data/*/*, results_data/*/*/*

[options.entry_points]
console_scripts =
    ela = shelah_cli.cli.ela_cli:ela_cli